--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,8 +76,8 @@ services:
       context: /utils/testing/pytest
       dockerfile: Dockerfile
     volumes:
-      - ./api:/app/api:cached
-      - ./services:/app/services:cached
+      - ./server/api:/app/api:cached
+      - ./server/services:/app/services:cached
     working_dir: /app
     command: pytest --junitxml=results/test-results.xml
     depends_on:
@@ -92,8 +92,8 @@ services:
       context: /utils/lints/flake8
       dockerfile: Dockerfile
     volumes:
-      - ./api:/app/api:cached
-      - ./services:/app/services:cached
+      - ./server/api:/app/api:cached
+      - ./server/services:/app/services:cached
     working_dir: /app
     command: flake8 api services
     networks:
@@ -104,7 +104,7 @@ services:
   api-main:
     container_name: api-main
     build:
-      context: /api
+      context: /server/api
       dockerfile: Dockerfile
     ports:
       - "${API_MAIN_PORT:-8010}:8010"
