--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,22 @@ services:
 
   # UTILS
 
+  nginx:
+    container_name: nginx
+    image: nginx:latest
+    ports:
+      - "${PROXY_PORT}:80"
+    restart: always
+    volumes:
+      - ./utils/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/client/build:/usr/share/nginx/html
+    depends_on:
+      - client
+      - api-news
+      - api-nlp
+    networks:
+      - custom_network
+
   rabbitmq:
     container_name: rabbitmq
     build:
@@ -101,13 +117,38 @@ services:
 
   # APIS
 
-  api-main:
-    container_name: api-main
+  api-news:
+    container_name: api-news
     build:
-      context: /server/api
+      context: /server/api/news
       dockerfile: Dockerfile
     ports:
-      - "${API_MAIN_PORT:-8010}:8010"
+      - "${API_NEWS_PORT:-8010}:8010"
+    restart: always
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    environment:
+      RABBITMQ_PORT: ${RABBITMQ_PORT:-5672}
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: ${POSTGRES_PORT:-5432}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_NAME: ${POSTGRES_NAME}
+    networks:
+      - custom_network
+
+  api-nlp:
+    container_name: api-nlp
+    build:
+      context: /server/api/nlp
+      dockerfile: Dockerfile
+    ports:
+      - "${API_NLP_PORT:-8011}:8011"
     restart: always
     depends_on:
       rabbitmq:
@@ -138,7 +179,10 @@ services:
     ports:
       - "${CLIENT_PORT}:3000"
     depends_on:
-      - api-main
+      - api-news
+      - api-nlp
+    networks:
+      - custom_network
 
 # VOLUMES
 
